Изменил все файлы

--- a/Theory/UrnModel1.html
+++ b/Theory/UrnModel1.html
@@ -19,11 +19,11 @@
                     сколько элементов выбирается k, 
                     сколько всего нужных элементов m:</p>
                 <p>n:</p>
-                <input id="valueN" type="number" name="n" value="0" size="10">
+                <input id="valueN" type="number" name="n"  size="10">
                 <p>k:</p>
-                <input id="valueK" type="number" name="k" value="0" size="10"> 
+                <input id="valueK" type="number" name="k"  size="10"> 
                 <p>m:</p>
-                <input id="valueM" type="number" name="m" value="0" size="10"> 
+                <input id="valueM" type="number" name="m"  size="10"> 
                 <br>
                 <p id="placements" class="latex">
                    Ответ:
