--- a/Theory/combinationsrepetions.html
+++ b/Theory/combinationsrepetions.html
@@ -23,9 +23,9 @@
                 </p>
                 <p>Введите числа n и k (Условие: n > 0, n &ge; k):</p>
                 <p>k:</p>
-                <input id="valueK" type="number" name="k" value="0" size="10">
+                <input id="valueK" type="number" name="k" value="" size="10">
                 <p>n:</p>
-                <input id="valueN" type="number" name="n" value="0" size="10">  
+                <input id="valueN" type="number" name="n" value="" size="10">  
                 <br>
                 <p id="placements" class="latex">
                    <i><i class="macr">С</i><span class="supsub"><sup>k</sup><sub>n</sub></span> = ?</i>
