--- a/Theory/permutations.html
+++ b/Theory/permutations.html
@@ -20,7 +20,7 @@
                 состоящее из n элементов.
                 </p>
                 <p>Введите число n (Условие: n &ge; 0):</p>
-                <input id="value" type="number" name="n" value="0" size="10"> 
+                <input id="value" type="number" name="n"  size="10"> 
                 <br>
                 <p id="permutations" class="latex">
                     <i>P<sub>n</sub> = ?</i>
