--- a/Theory/permutationsrepetions.html
+++ b/Theory/permutationsrepetions.html
@@ -22,7 +22,7 @@
                 <p>Введите число типов объектов k > 0
                     и затем количество объектов каждого типа n<sub>1</sub>,..., n<sub>k</sub>:</p>
                 <p>k:</p>
-                <input id="valueK" type="number" name="k" value="0" size="10">
+                <input id="valueK" type="number" name="k"  size="10">
                 <br><br>
                 <div id="fields">
                 </div>
