--- a/Theory/UrnModel2.html
+++ b/Theory/UrnModel2.html
@@ -20,13 +20,13 @@
                     сколько всего нужных элементов m,
                     сколько нужно выбрать нужных элементов r:</p>
                 <p>n:</p>
-                <input id="valueN" type="number" name="n" value="0" size="10">
+                <input id="valueN" type="number" name="n"  size="10">
                 <p>k:</p>
-                <input id="valueK" type="number" name="k" value="0" size="10"> 
+                <input id="valueK" type="number" name="k"  size="10"> 
                 <p>m:</p>
-                <input id="valueM" type="number" name="m" value="0" size="10"> 
+                <input id="valueM" type="number" name="m"  size="10"> 
                 <p>r:</p>
-                <input id="valueR" type="number" name="r" value="0" size="10"> 
+                <input id="valueR" type="number" name="r"  size="10"> 
                 <br>
                 <p id="placements" class="latex">
                    Ответ:
