--- a/Theory/placementsrepetions.html
+++ b/Theory/placementsrepetions.html
@@ -22,9 +22,9 @@
                 </p>
                 <p>Введите числа n и k (Условие: n &ge; 0, k &ge; 0):</p>
                 <p>k:</p>
-                <input id="valueK" type="number" name="k" value="0" size="10">
+                <input id="valueK" type="number" name="k"  size="10">
                 <p>n:</p>
-                <input id="valueN" type="number" name="n" value="0" size="10">  
+                <input id="valueN" type="number" name="n"  size="10">  
                 <br>
                 <p id="placements" class="latex">
                    <i><i class="macr">A</i><span class="supsub"><sup>k</sup><sub>n</sub></span> = ?</i>
